had a lot of trouble with images and text in the css. i tried it on another file and it worked but could not figure out why it wouldnt work on this file. I ended up adding another syle sheet and this fixed the problem. not an ideal solution, i wolud like to know why it wasnt working but i spend too much time researching it

--- a/T1A2.css
+++ b/T1A2.css
@@ -3,7 +3,21 @@ body {
   padding: 0;
   animation: backgroundcolour infinite 40s;
   box-sizing: border-box;
+
 }
+
+header {
+  width: 100%;
+  height: 80px;
+  display: block;
+
+}
+.trial {
+  width: 300px;
+  height: 200px;
+  border: 3px solid grey;
+}
+
 .footer {
   position: fixed;
   left: 0;
@@ -288,3 +302,4 @@ body{
     width: 100%;
   }
 }
+
